# 333

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
.github/workflows/: analyze-and-readme.yml  ci.yml  pages.yml
docs/: index.html  要件定義.yaml
docs/templates/: README.template.md  site.template.html
src/analysis/: pbr_stats.py  roe_stats.py  sector_hhi.py  yield_stats.py
src/codex/: codex_runner.py
src/codex/prompts/: refresh_metrics.prompt.txt
src/ingest/: csv_to_canonical.py
src/render/: build_site.py  common.py  write_readme.py
src/utils/: io.py
tests/: test_pipeline.py
